[gd_scene load_steps=18 format=3 uid="uid://cytvyxkffphc7"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_4v2w6"]
[ext_resource type="Texture2D" uid="uid://d30vexk5hff6f" path="res://Player/Ficino_base.png" id="2_hl0fq"]
[ext_resource type="Texture2D" uid="uid://ce7w7mpvowkfd" path="res://Player/slash.png" id="2_qi6jb"]
[ext_resource type="AudioStream" uid="uid://ccpbb2m8di64c" path="res://music/attack.wav" id="4_gm3fn"]
[ext_resource type="AudioStream" uid="uid://dhc0tsu883nvc" path="res://music/hurt.wav" id="5_pg5lg"]
[ext_resource type="AudioStream" uid="uid://cb2o7b45640ec" path="res://music/death1.wav" id="6_65rfd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s17r7"]
radius = 7.5
height = 26.0

[sub_resource type="Animation" id="Animation_j12jh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Slash:flip_v")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ff52o"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_ptela"]
resource_name = "idle_escudo"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Slash:flip_v")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Audio_Attack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_gm3fn")
}],
"times": PackedFloat32Array(0.1)
}
tracks/4/use_blend = true

[sub_resource type="Animation" id="Animation_mk0mr"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0)]
}

[sub_resource type="Animation" id="Animation_b15uy"]
resource_name = "walk_escudo"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio_Attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_gm3fn")
}],
"times": PackedFloat32Array(0.1)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2cdl"]
_data = {
"RESET": SubResource("Animation_j12jh"),
"idle": SubResource("Animation_ff52o"),
"idle_escudo": SubResource("Animation_ptela"),
"walk": SubResource("Animation_mk0mr"),
"walk_escudo": SubResource("Animation_b15uy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w407s"]
radius = 24.5669
height = 182.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qpwjx"]
radius = 15.5081

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhd8x"]
bg_color = Color(0, 0, 0, 0.627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob6k7"]
bg_color = Color(0.79, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(0, -32)
scale = Vector2(2, 2)
script = ExtResource("1_4v2w6")
ritual_interval = 15.0
ritual_cooldown = 10.0

[node name="Slash" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -2.948)
scale = Vector2(1.03661, 0.565)
texture = ExtResource("2_qi6jb")
flip_v = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hl0fq")
hframes = 14
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8.5)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_s17r7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2cdl")
}
autoplay = "idle"
speed_scale = 0.5

[node name="Attack_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Area"]
position = Vector2(11, -7.8614)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_w407s")
debug_color = Color(0.984314, 0, 0.360784, 0)

[node name="HitboxArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, 1.5)
shape = SubResource("CircleShape2D_qpwjx")
debug_color = Color(1, 1, 1, 0)

[node name="HealthProgressBar" type="ProgressBar" parent="."]
offset_left = -18.0
offset_top = 17.0
offset_right = 67.0
offset_bottom = 26.0
scale = Vector2(0.424197, 0.424197)
theme_override_styles/background = SubResource("StyleBoxFlat_dhd8x")
theme_override_styles/fill = SubResource("StyleBoxFlat_ob6k7")
step = 1.0
show_percentage = false

[node name="Audio_Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pg5lg")
volume_db = -10.0

[node name="Audio_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_65rfd")
volume_db = -10.0

[node name="Audio_Attack" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
autoplay = true
